# flake8-complicated-walrus

./: LICENSE  Makefile  README.md  flake8_complicated_walrus.py  pyproject.toml  setup.cfg
tests/: test_linter.py
