[tool.poetry]
name = "flake8-complicated-walrus"
version = "1.0.0"
license = "MIT"
description = "This Flake8 plugin for checking complicated assignment expressions."
authors = ["Dudov Dmitry <dudov.dm@gmail.com>"]
readme = "README.md"
keywords = ["flake8-complicated-walrus", "flake8", "plugin", "walrus", "assignment expression", "if", "conditions"]
repository = "https://github.com/DDmitiy/flake8-complicated-walrus"
classifiers=[
    "Framework :: Flake8",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
FCW = "flake8_complicated_walrus:Plugin"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^4"
astpretty = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
twine = "^3.4.1"
black = "^22.3.0"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-logging-format = "^0.6.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^1.6.0"
flake8-quotes = "^3.3.1"
flake8-return = "^1.1.3"
isort = "^5.10.1"
mypy = "^0.950"
pep8-naming = "^0.12.1"
pylint = "^2.13.9"
pytest-asyncio = "^0.18.3"
pytest-cov = "^3.0.0"
pytest-deadfixtures = "^2.2.1"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.7.0"
