[tool.poetry]
name = "flake8-complicated-walrus"
version = "2.1.0"
license = "MIT"
description = "This Flake8 plugin for checking complicated assignment expressions."
authors = ["Dudov Dmitry <dudov.dm@gmail.com>"]
readme = "README.md"
keywords = ["flake8-complicated-walrus", "flake8", "plugin", "walrus", "assignment expression", "if", "conditions"]
repository = "https://github.com/DDmitiy/flake8-complicated-walrus"
classifiers=[
    "Framework :: Flake8",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.plugins]
[tool.poetry.plugins."flake8.extension"]
FCW = "flake8_complicated_walrus:Plugin"

[tool.black]
line-length = 120

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "*"
astpretty = "^3.0"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
pytest = "^7.4"
black = "^23.7"
twine = "^4.0"
flake8-builtins = "^2.1"
flake8-comprehensions = "^3.14"
flake8-eradicate = "^1.5"
flake8-isort = "^6.0"
flake8-logging-format = "^0.9"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-pytest-style = "^1.7"
flake8-quotes = "^3.3"
flake8-return = "^1.2"
isort = "^5.12"
mypy = "^1.4"
pep8-naming = "^0.13"
pylint = "^2.17"
pytest-asyncio = "^0.21"
pytest-cov = "^4.1"
pytest-deadfixtures = "^2.2.1"
pytest-lazy-fixture = "^0.6.3"
pytest-mock = "^3.11"
unify = "^0.5"

[tool.isort]
balanced_wrapping=true
default_section="THIRDPARTY"
include_trailing_comma=true
known_first_party="tests"
line_length=88
multi_line_output=3

[tool.pylint]
max-args = 5
output-format = "colorized"
max-line-length=120
disable = [
    "C0103", # Attribute name doesn't conform to snake_case naming style (invalid-name)
    "C0114", # Missing module docstring (missing-docstring)
    "C0115", # Missing class docstring (missing-class-docstring)
    "C0116", # Missing function or method docstring (missing-function-docstring)
    "C0301", # Line too long (m/n) (line-too-long)
]
